
* Release history

** v0.8.0

- Fix the installation command in README.org, provided by magthe.
- Introduce aider-legacy-code.el, it provides legacy code handling techniques based on Michael Feathers' "Working Effectively with Legacy Code" for the Aider package.
- Re-organize README to make it easier to read.
- Fix the bug in aider--analyze-program-structure, provided by EdmondFrank.

** v0.7.0

- ~aider-run-aider~ in dired, eshell, or shell buffer will ask if user wants to add `--subtree-only` flag
- Introduce AI assisted TDD, ~aider-tdd-cycle~, an experimental feature.
- Use gemini-exp in aider-popular-models, as well as README example, since it is still free at 2025-04-05
- Introduce AI assisted code reading functions, based on "Code Reading: The Open Source Perspective" by Diomidis Spinellis
- Extract aider-refactor-book-method and aider-tdd-cycle into a dedicate file aider-agile.el

** v0.6.0

- Add ~aider-refactor-book-method~ and introduced couple of refactoring techniques from [[https://www.amazon.com/Refactoring-Improving-Existing-Addison-Wesley-Signature/dp/0134757599/ref=asc_df_0134757599?mcid=2eb8b1a5039a3b7c889ee081fc2132e0&hvocijid=16400341203663661896-0134757599-&hvexpln=73&tag=hyprod-20&linkCode=df0&hvadid=721245378154&hvpos=&hvnetw=g&hvrand=16400341203663661896&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9032161&hvtargid=pla-2281435180458&psc=1][Martin Flower's Refactoring book]]
- Enhance ~aider-plain-read-string~ with better completion and history
  - This came from https://github.com/MatthewZMD/aidermacs/commit/cbb9bada03681d7ab27ce3bce1c9be9e9469da99
- Deprecate +aider-other-process-command+ menu item. aider comint session already have command completion, so there is no advantage to use this menu item.
- Update keyword completion and highlight given aider in-chat commands change