@@ -1,6 +1,10 @@
 
 * Release history
 
+** main branch change
+
+- aider comint session input line shouldn't apply markdown rendering, based on issue found by ahyatt: https://github.com/tninja/aider.el/issues/126
+
 ** v0.8.0
 
 - Fix the installation command in README.org, provided by magthe.
